--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,45 @@
+/* main.css */
+body {
+    background-color: #f8f9fa;
+    color: #333;
+}
+
+/* Header and Footer Customizations */
+header, footer {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+header .navbar-brand img {
+    margin-right: 10px;
+}
+
+/* Form Customizations */
+form {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Button Customizations */
+.btn-primary {
+    background-color: #0056b3;
+    border-color: #0056b3;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.btn-primary:hover {
+    background-color: #004085;
+    border-color: #004085;
+}
+
+/* List Styling */
+.list-group-item {
+    border: none;
+}
+
+
+
 /* Global styles */
 body {
     font-family: Arial, Helvetica, sans-serif;
